# BookLending

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: setup.md  use-case.md
requirements/: requirements.dev.in  requirements.in
src/: main.py
src/models/: person.py
tests/: test_person.py  test_root.py
